Imported several updates and changes for speeding-up morphological feature extraction.